{
    "name": "InputMaster",
    "maps": [
        {
            "name": "AvatarActionMap",
            "id": "d5fa353c-6ec2-4452-9699-303fab5c79f2",
            "actions": [
                {
                    "name": "MoveUpwardAction",
                    "type": "Button",
                    "id": "1aaf91a6-9100-43a3-8480-15783358c438",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeftAction",
                    "type": "Button",
                    "id": "a43a8489-43a6-48bc-ac99-d35d1343bcb7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveDownAction",
                    "type": "Button",
                    "id": "1e741df6-953c-43ce-b28f-6f7c2731f071",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRightAction",
                    "type": "Button",
                    "id": "c41c0a8b-a653-4012-8b84-80547ce745c5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QInteract",
                    "type": "Button",
                    "id": "ab522102-526c-4f3f-aabb-67228dbc9d11",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EInteract",
                    "type": "Button",
                    "id": "3296c76e-5255-49b5-9964-26cad29c1a21",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EscapeAction",
                    "type": "Button",
                    "id": "22d404dc-776b-44dd-b523-56e80d688f82",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GrowRopeAction",
                    "type": "Button",
                    "id": "eb74c68f-5d7c-44ad-a31e-0419111ac931",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShrinkRopeAction",
                    "type": "Button",
                    "id": "3aee24e1-2bd3-4caf-84f9-2dcaed72f65a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PlaceRopeAction",
                    "type": "Button",
                    "id": "df6ced87-53a5-4cf6-aca0-42d7dd5f52ff",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d5126ad7-196f-4bfb-a3f7-f1cbc4b24f91",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUpwardAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59231108-110e-4852-95e7-bf9d0b3be5c1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c38a5f0-867b-4280-9ab7-32a8e0127271",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDownAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "883aecf6-842f-471d-a1a7-f0e03aa81743",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16b0c178-f53f-4bd8-9dcf-b74d730003ce",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed671a3f-cc84-42ff-9252-0febcb7666bf",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c698e7a1-1c1e-43bc-8760-e7de39f2bf4f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EscapeAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c828baff-5274-4506-b4ca-ec66070e4337",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrowRopeAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17270cb5-9ec3-4caa-93bd-4ae1dbd4ff96",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShrinkRopeAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c6b4472-d9c6-4a3a-9e07-dbbde4061d50",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceRopeAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}